--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
+    "libphonenumber-js": "^1.12.27",
     "next": "16.0.3",
     "postcss": "^8.5.6",
     "query-string": "^9.3.1",
